--- a/entrypoints/options/style.css
+++ b/entrypoints/options/style.css
@@ -24,6 +24,17 @@ header {
   margin-bottom: 16px;
 }
 
+.settings {
+  margin-bottom: 16px;
+}
+
+.setting {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  font-weight: 600;
+}
+
 h1 {
   margin: 0 0 4px;
   font-size: 24px;
