feat: pin nufftabs list tab after condense

--- a/entrypoints/nufftabs/style.css
+++ b/entrypoints/nufftabs/style.css
@@ -147,7 +147,7 @@ button {
 .icon-button svg {
   width: 20px;
   height: 20px;
-  stroke: currentColor;
+  fill: currentColor;
   display: block;
 }
 
